--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,6 +1,3 @@
-// Revisar el archivo node_modules\bootstrap\scss\_variables.scss
-// @import "../node_modules/bootstrap/scss/bootstrap.scss";
-
 $container-max-widths: (
   sm: 540px,
   md: 780px,
@@ -8,10 +5,10 @@ $container-max-widths: (
   xl: 1140px,
   xxl: 1320px
 );
+
 $white:    #fff !default;
-$nav-link-color: null $white;
-$nav-link-hover-color: null $white;
-// #eceae2 #f1f0ea
+$link-color: theme-color("white") !default;
+$link-hover-color: darken($white, 10%) !default;
 $light: #f1f0ea;
 
 $font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
@@ -27,11 +24,23 @@ $h4-font-size:                $font-size-base * 1.5 !default;
 $h5-font-size:                $font-size-base * 1.25 !default;
 $h6-font-size:                $font-size-base !default; */
 
+a {
+  color: $white;
+  text-decoration: none;
+  background-color: transparent;
+}
+a:hover {
+  color:  $white;
+  text-decoration: underline;
+}
 .cardsWidth {
   width: 8rem;
   font-size: $smaller-font;
 }
-
+.ordersWidth {
+  width: 13rem;
+  font-size: $smaller-font;
+}
 .imgCardSize {
   padding: 0.3rem;
   height: 6.5rem;
